--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   },
   "dependencies": {
     "@fontsource-variable/recursive": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
+    "canvas-confetti": "^1.9.3",
     "tailwindcss": "^4.1.11"
   }
 }
