--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   },
@@ -17,6 +20,8 @@
     "@fontsource-variable/recursive": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
     "canvas-confetti": "^1.9.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.11"
   }
 }
