--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@fontsource-variable/recursive": "^5.2.6",
+    "@svgdotjs/svg.js": "^3.2.4",
     "@tailwindcss/vite": "^4.1.11",
     "canvas-confetti": "^1.9.3",
     "react": "^19.0.0",
